--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.vuxiii</groupId>
   <artifactId>regex</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>regex</name>
   <!-- FIXME change it to the project's website -->
