--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
     </dependency>
   </dependencies>
 
+  <distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>My implementation of a Regex-Parser</name>
+     <url>https://maven.pkg.github.com/vuxiii/regex</url>
+   </repository>
+  </distributionManagement>
   <!-- <maven.compiler.release>11</maven.compiler.release> -->
 
   <build>
